--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image Compression Tool</title>
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </head>
 
@@ -34,6 +35,9 @@
 
     <!-- Download Button -->
     <button id="downloadButton" class="btn hidden">Download Selected Images</button>
+
+    <!-- Download All Button -->
+    <button id="downloadAllButton" class="btn hidden">Download All Selected Images</button>
   </div>
 
   <script src="app.js"></script>
